about me page fix bullet point alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -619,6 +619,21 @@ section .container {
   text-align: justify;
 }
 
+/* Align all bullet points on bigger screens */
+@media (min-width: 992px) {
+  /* Select the first 2 col-lg- */
+  .about-me .content .about__section--left,
+  .about-me .content .about__section--right {
+    display: flex;
+  }
+  .about-me .content ul {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
 @media (max-width: 575px) {
   /* Edit for phones */
   .about-me .description {
